--- a/docs/out_ptr/customization.adoc
+++ b/docs/out_ptr/customization.adoc
@@ -11,13 +11,13 @@
 [customization]
 # Customization for Your Smart Pointers
 
-Both `boost::ptr::out_ptr` and `boost::ptr::inout_ptr` have expectations on the Smart Pointer passed into it as the first argument.
+Both `boost::out_ptr::out_ptr` and `boost::out_ptr::inout_ptr` have expectations on the Smart Pointer passed into it as the first argument.
 
-In general, `boost::ptr::out_ptr` needs the following 2 things:
+In general, `boost::out_ptr::out_ptr` needs the following 2 things:
 - A `.get()` call, to retrieve the underlying pointer;
 - and, one of `.reset(pointer, Args...)` or `SmartPointer(pointer, Args...)` to be a well-formed expression.
 
-Additionally, `boost::ptr::inout_ptr` has one more additional requirement:
+Additionally, `boost::out_ptr::inout_ptr` has one more additional requirement:
 - have a `.release()` function to release ownership of the resource so that utilized API can delete it and then re-allocate it.
 
 Therefore, if you have a `.get()` and `.reset()` call, alongside a `.release()` for `inout_ptr`, you are completely fine with the default implementation.
@@ -25,7 +25,7 @@ Therefore, if you have a `.get()` and `.reset()` call, alongside a `.release()` 
 
 ## Changing the Defaults
 
-A user can change the default behavior of these types for their classes, so long as they follow the 4 functions specified for either <<reference/out_ptr.adoc#ref.out_ptr.class, `boost::ptr::out_ptr_t`>> or <<reference/inout_ptr.adoc#ref.inout_ptr.class, `boost::ptr::inout_ptr_t`>>. Let us consider a hypothetical class `handle` in a library and namespace named `phd`, where it is a more specialized version of `std::unique_ptr` that does not necessarily assume pointer semantics for the type. It allows one to customize how nullability is checked, what null value is written into the type, and more by the deleter (to make it work for an e.g. `int`):
+A user can change the default behavior of these types for their classes, so long as they follow the 4 functions specified for either <<reference/out_ptr.adoc#ref.out_ptr.class, `boost::out_ptr::out_ptr_t`>> or <<reference/inout_ptr.adoc#ref.inout_ptr.class, `boost::out_ptr::inout_ptr_t`>>. Let us consider a hypothetical class `handle` in a library and namespace named `phd`, where it is a more specialized version of `std::unique_ptr` that does not necessarily assume pointer semantics for the type. It allows one to customize how nullability is checked, what null value is written into the type, and more by the deleter (to make it work for an e.g. `int`):
 
 ```
 namespace phd {
@@ -63,25 +63,25 @@ namespace phd {
 } // namespace phd
 ```
 
-This type may require special support. For example, this might represent a handle to a resource, but that handle is only a `uint32` (e.g., `GLuint` for OpenGL and similar). A user may _(partially) template specialize_ the customize `boost::ptr::out_ptr_t` and `boost::ptr::inout_ptr_t`. Here is an example for `out_ptr_t`:
+This type may require special support. For example, this might represent a handle to a resource, but that handle is only a `uint32` (e.g., `GLuint` for OpenGL and similar). A user may _(partially) template specialize_ the customize `boost::out_ptr::out_ptr_t` and `boost::out_ptr::inout_ptr_t`. Here is an example for `out_ptr_t`:
 
-- First, open up the `boost::ptr` namespace:
+- First, open up the `boost::out_ptr` namespace:
 ```
-namespace boost { namespace ptr {
+namespace boost { namespace out_ptr {
 
-}} // namespace boost::ptr
+}} // namespace boost::out_ptr
 ```
 
 - Then, create a _partial template specialization_:
 ```
-namespace boost { namespace ptr {
+namespace boost { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer, typename... Args>
 	class out_ptr_t<phd::handle<T, Del>, Pointer, Args...> {
 		/* ... */
 	};
 
-}} // namespace boost::ptr
+}} // namespace boost::out_ptr
 ```
 
 - Now, we need to create a family of required functions (4 types, 5 implementations). We need... 
@@ -91,7 +91,7 @@ namespace boost { namespace ptr {
 * and, a destructor that calls .reset().
 
 ```
-namespace boost { namespace ptr {
+namespace boost { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer, typename... Args>
 	class out_ptr_t<phd::handle<T, Del>, Pointer, Args...> {
@@ -107,9 +107,9 @@ namespace boost { namespace ptr {
 		~out_ptr_t() noexcept;
 	}
 
-}} // namespace boost::ptr
+}} // namespace boost::out_ptr
 ```
 
-And that is everything we need to write. A full, optimized implementation for `boost::ptr::out_ptr_t` and `phd::handle` can be seen in https://github.com/ThePhD/out_ptr/blob/master/examples/source/custom.handle.cpp[this example].
+And that is everything we need to write. A full, optimized implementation for `boost::out_ptr::out_ptr_t` and `phd::handle` can be seen in https://github.com/ThePhD/out_ptr/blob/master/examples/source/custom.handle.cpp[this example].
 
-The work is identical for `inout_ptr_t`, but the requirements on the type for how the destructor behave is slightly different. It anticipates that the function handling the double-pointer output argument `T**` will also handle calling the deleter first before re-allocating properly; therefore, its only responsibility to make sure the pointer is properly reseated in the smart pointer. This is typically done by calling `.release()` on the smart pointer and then putting the new value back into the pointer. For this reason, `boost::ptr::inout_ptr_t` cannot support shared pointers, because there is no way to release a pointer in a shared ownership model.
+The work is identical for `inout_ptr_t`, but the requirements on the type for how the destructor behave is slightly different. It anticipates that the function handling the double-pointer output argument `T**` will also handle calling the deleter first before re-allocating properly; therefore, its only responsibility to make sure the pointer is properly reseated in the smart pointer. This is typically done by calling `.release()` on the smart pointer and then putting the new value back into the pointer. For this reason, `boost::out_ptr::inout_ptr_t` cannot support shared pointers, because there is no way to release a pointer in a shared ownership model.
